--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- бургер -->
+    <div id="accordion" class="accordion">
+        <div class="accordions">
+            <div class="accordion-box">
+                <a href="#" class="accordion-header"><span cclass="accordion-buton">MENU</span></a>
+                <div class="accordion-body" id="acrd_1">
+                    <div class="accordion-content-flex">
+                        <ul class="menu2">
+                            <li class="menu__li"><a href="#" class="menu__link menu__link_active">home</a></li>
+                            <li class="menu__li"><a href="#" class="menu__link">portfolio</a></li>
+                            <li class="menu__li"><a href="#" class="menu__link">about us</a></li>
+                            <li class="menu__li"><a href="#" class="menu__link">contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- бургер -->
     <header class="center top">
         <ul class="menu">
             <li class="menu__li"><a href="#" class="menu__link menu__link_active">home</a></li>
@@ -24,27 +41,6 @@
             <li class="menu__li"><a href="#" class="menu__link">about us</a></li>
             <li class="menu__li"><a href="#" class="menu__link">contact</a></li>
         </ul>
-        <div class="navBar">
-            <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
-                <div>
-                    <ul class="menu2">
-                        <li class="menu__li"><a href="#" class="menu__link menu__link_active">home</a></li>
-                        <li class="menu__li"><a href="#" class="menu__link">portfolio</a></li>
-                        <li class="menu__li"><a href="#" class="menu__link">about us</a></li>
-                        <li class="menu__li"><a href="#" class="menu__link">contact</a></li>
-                    </ul>
-                </div>
-            </div>
-            <nav class="navbar navbar-dark">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="span">Menu</span>
-                    </button>
-                </div>
-            </nav>
-        </div>
         <div class="media">
             <div class="media__info">
                 <h1 class="media__title">
@@ -119,7 +115,8 @@
                     </p>
                 </div>
             </div>
-            <div class="zone"> </div>
+            </div>
+            <div class="zone">
         </section>
         <section class="products">
             <div class="products__title">
@@ -273,9 +270,32 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
+
+    <script>
+
+        (() => {
+            let accordion = document.getElementById("accordion");
+            let accordion_header = accordion.getElementsByClassName("accordion-header");
+
+            const toggleAccordion = event => {
+                let this_header = event.currentTarget;
+                let this_body = this_header.nextElementSibling;
+                // close active tab
+                if (this_header.classList.contains("active-accordion")) {
+                    this_header.classList.remove("active-accordion");
+                    this_body.style.display = "none";
+                } else {
+                    this_header.classList.add("active-accordion");
+                    this_body.style.display = "block";
+                }
+                return false;
+            };
+
+            for (var i = 0; i < accordion_header.length; i++) {
+                accordion_header[i].onclick = toggleAccordion;
+            }
+        })();
+    </script>
 </body>
 
 </html>
