--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="accordion" class="accordion">
         <div class="accordions">
             <div class="accordion-box">
-                <a href="#" class="accordion-header"><span cclass="accordion-buton">MENU</span></a>
+                <a href="#" class="accordion-header"><span class="accordion-buton">MENU</span></a>
                 <div class="accordion-body" id="acrd_1">
                     <div class="accordion-content-flex">
                         <ul class="menu2">
@@ -115,8 +115,7 @@
                     </p>
                 </div>
             </div>
-            </div>
-            <div class="zone">
+            <div class="zone"></div>
         </section>
         <section class="products">
             <div class="products__title">
